# fact_searcher

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: github-actions.yml
src/fact_searcher/: app.py  fact_searcher.py  facts_searcher.py  settings.py  types.py
tests/: test_fact_searcher.py
